--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,36 @@
+/* google font poppins */
 body{
     font-family: 'Poppins', sans-serif;
 }
+/* header's background color */
 .bg-color-header{
     background-color: #264653;
     ;
 }
+/* paragraph custom css */
 .p-font-size{
     font-size: 16px;
     font-weight:300;
 }
+/* heading custom css style */
 .h1-font-size{
     font-size: 48px;
     font-weight: 600;
 }
+/* button custom style css */
 .btn-orange{
     background-color: #E76F51;
     padding: 10px 46px;
     border: 1px;
     border-radius: 5px;
     font-weight: 500;
+}
+.p-color-size{
+    color: #E76F51;
+    font-size:16px ;
+    font-weight: 600;
+}
+/* grayscale images */
+.grayscale{
+    filter: grayscale(100%);
 }
